src/main/java/syntactic/test/failing/arrayWithCustomClass.ru
struct Test {
    Array Clase test;
}